error message removed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="radio" onclick="yesnoCheck();" name="Resident" id="commercial">COMMERCIAL
       </label>
       <br>
-      <span id="propertyErrorMessage" style="color: red; "></span>
+      <!-- <span id="propertyErrorMessage" style="color: red; "></span> -->
       <br>
        <!-- <p id residentshow></p> -->
 
